crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__attribute__multiple_dots.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/attribute/multiple_dots.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..46,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 0..10,
                    value: Attribute(
                        ExprAttribute {
                            node_index: NodeIndex(None),
                            range: 0..10,
                            value: Attribute(
                                ExprAttribute {
                                    node_index: NodeIndex(None),
                                    range: 0..6,
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 0..5,
                                            id: Name("extra"),
                                            ctx: Load,
                                        },
                                    ),
                                    attr: Identifier {
                                        id: Name(""),
                                        range: 6..6,
                                        node_index: NodeIndex(None),
                                    },
                                    ctx: Load,
                                },
                            ),
                            attr: Identifier {
                                id: Name("dot"),
                                range: 7..10,
                                node_index: NodeIndex(None),
                            },
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 11..19,
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 11..19,
                            id: Name("multiple"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 19..27,
                    value: Attribute(
                        ExprAttribute {
                            node_index: NodeIndex(None),
                            range: 19..27,
                            value: EllipsisLiteral(
                                ExprEllipsisLiteral {
                                    node_index: NodeIndex(None),
                                    range: 19..22,
                                },
                            ),
                            attr: Identifier {
                                id: Name("dots"),
                                range: 23..27,
                                node_index: NodeIndex(None),
                            },
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 28..36,
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 28..36,
                            id: Name("multiple"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 36..45,
                    value: Attribute(
                        ExprAttribute {
                            node_index: NodeIndex(None),
                            range: 36..45,
                            value: Attribute(
                                ExprAttribute {
                                    node_index: NodeIndex(None),
                                    range: 36..40,
                                    value: EllipsisLiteral(
                                        ExprEllipsisLiteral {
                                            node_index: NodeIndex(None),
                                            range: 36..39,
                                        },
                                    ),
                                    attr: Identifier {
                                        id: Name(""),
                                        range: 40..40,
                                        node_index: NodeIndex(None),
                                    },
                                    ctx: Load,
                                },
                            ),
                            attr: Identifier {
                                id: Name("dots"),
                                range: 41..45,
                                node_index: NodeIndex(None),
                            },
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | extra..dot
  |       ^ Syntax Error: Expected an identifier
2 | multiple....dots
3 | multiple.....dots
  |


  |
1 | extra..dot
2 | multiple....dots
  |         ^^^ Syntax Error: Simple statements must be separated by newlines or semicolons
3 | multiple.....dots
  |


  |
1 | extra..dot
2 | multiple....dots
3 | multiple.....dots
  |         ^^^ Syntax Error: Simple statements must be separated by newlines or semicolons
  |


  |
1 | extra..dot
2 | multiple....dots
3 | multiple.....dots
  |             ^ Syntax Error: Expected an identifier
  |
